tests/toylang/neg/000624_mutation.toylang
program a = { a = a == a program; } .
